# tauri-plugin-permissionsX

./: .gitignore  .npmignore  Cargo.toml  README.md  build.rs  esbuild.config.js  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: clippy.yml  test.yml
android/: build.gradle.kts  local.properties  settings.gradle
android/src/: import
android/src/androidTest/java/: ExampleInstrumentedTest.kt
android/src/main/: AndroidManifest.xml
android/src/main/java/: Example.kt  ExamplePlugin.kt  MyForegroundService.kt  PermissionsxPlugin.kt
android/src/test/java/: ExampleUnitTest.kt
examples/tauri-app/: package.json  pnpm-lock.yaml
examples/tauri-app/src/: App.svelte
examples/tauri-app/src-tauri/: Cargo.toml
examples/tauri-app/src-tauri/capabilities/: README.md  desktop.json  mobile.json
examples/tauri-app/src-tauri/src/: lib.rs
examples/tauri-app/src/components/: Greet.vue
guest-js/: index.ts
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: startPersistentNotify.toml  stopPersistentNotify.toml  test.toml  tester.toml
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
